syntax = "proto3";

package workout_training_api.ping.v1;

import "workout-training-api/workout/v1/model.proto";

import "google/protobuf/timestamp.proto";

option go_package="workout-training-api/internal/grpc/generated/workout-training-api/workout/v1";


message CreateWorkoutRequest {
  string user_id = 1;
  string name = 2;
  string description = 3;
  repeated Exercise exercises = 4;
  repeated Comment comment = 5;
  google.protobuf.Timestamp scheduled_time = 6;
}

message CreateWorkoutResponse {
  Workout workout = 1;
}



