syntax = "proto3";

package workout_training_api.ping.v1;

option go_package="github.com/talgat-ruby/workout-training-api/internal/grpc/generated/workout-training-api/workout/v1";

import "google/protobuf/timestamp.proto";

message Workout {
  string workout_id = 1;
  string user_id = 2;
  string name = 3;
  string description = 4;
  repeated Exercise exercises = 5;
  Status status = 6;
  repeated Comment comments = 7;
  google.protobuf.Timestamp scheduled_date = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message Exercise {
  string exercise_id = 1;
  MuscleGroup muscle_group = 2;
  Category category = 3;
  string name = 4;
  uint32 sets = 5;
  uint32 reps_per_set = 6;
  float weight_kg = 7;
  string notes = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}



enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_PENDING = 1;
  STATUS_IN_PROGRESS = 2;
  STATUS_COMPLETED = 3;
  STATUS_CANCELLED = 4;
}

enum MuscleGroup {
  MUSCLE_GROUP_UNSPECIFIED = 0;
  MUSCLE_GROUP_CHEST = 1;
  MUSCLE_GROUP_BACK = 2;
  MUSCLE_GROUP_SHOULDERS = 3;
  MUSCLE_GROUP_BICEPS = 4;
  MUSCLE_GROUP_TRICEPS = 5;
  MUSCLE_GROUP_LEGS = 6;
  MUSCLE_GROUP_CALVES = 7;
  MUSCLE_GROUP_ABS = 8;
  MUSCLE_GROUP_FOREARMS = 9;
  MUSCLE_GROUP_TRAPS = 10;
  MUSCLE_GROUP_GLUTES = 11;
  MUSCLE_GROUP_HAMSTRINGS = 12;
  MUSCLE_GROUP_QUADRICEPS = 13;
  MUSCLE_GROUP_FULL_BODY = 14;
  MUSCLE_GROUP_CARDIO = 15;
}

enum Category {
  CATEGORY_UNSPECIFIED = 0;
  CATEGORY_STRENGTH = 1;
  CATEGORY_CARDIO = 2;
  CATEGORY_FLEXIBILITY = 3;
  CATEGORY_BALANCE = 4;
}

message Comment {
  string comment=1;
}
